# playcircle

./: .gitignore  Cargo.toml  PRD.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: macos-release.yml
public/: pc-data.js  rekordbox-demo-tracks.json
scripts/: first-existing-rekordbox-audio.mjs
src/app/: Cargo.toml  tauri.conf.json
src/app/src/: lib.rs  main.rs
src/audio/: Cargo.toml
src/audio/examples/: decode_perf.rs  load_playback_perf.rs
src/audio/src/: deck.rs  decoder.rs  engine.rs  lib.rs
src/controller/: Cargo.toml
src/controller/src/: lib.rs
src/frontend/: App.tsx  designTypes.ts  index.html  styles.css
src/frontend/api/: audio.ts  controller.ts  rekordbox.ts
src/frontend/components/: CommandPalette.tsx  DebugWindow.tsx  FilterBar.tsx  Inspector.tsx  LibraryWorkspace.tsx  PlayerDock.tsx  SettingsPanel.tsx  Sidebar.tsx  TopBar.tsx  TrackDragOverlay.tsx  TrackTable.tsx  common.tsx
src/frontend/data/: libraryMapping.ts  recentTracks.ts
src/frontend/hooks/: useControllerPolling.ts
src/frontend/lib/: audioMath.ts  controllerFx.ts  dnd.ts  library.ts
src/rekordbox/: Cargo.toml
src/rekordbox/examples/: export_tracks.rs  load_perf.rs
src/rekordbox/src/: lib.rs
tests/: drag-load.spec.ts  library-management.spec.ts
tests/perf/: initial-load.spec.ts  library-node-switch.spec.ts  library.spec.ts  sort.spec.ts
